Moved files around renamced RHVoice to RHVoiceObjC and created new RHVoiceSwift to start adding Swift implementation and deprecate RHVoiceObjC

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,4 +22,4 @@ jobs:
           submodules: recursive
       - run: |
           rm -fr .build | echo "Removed build folder"
-          swift build -c release --target RHVoiceCore
+          swift build -c release --target RHVoiceSwift
