Updated workflow to build RHVoiceSwift

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Build
         run: |
           rm -fr .build | echo "Removed build folder"
-          swift build -c release --target RHVoice
+          swift build -c release --target RHVoiceSwift
